Increased test granularity to isolate the failures
git-svn-id: svn+ssh://svn.wikimedia.org/svnroot/mediawiki/trunk@108951 dd0e9695-b195-4be7-bd10-2dea1a65a6b6